collapse from lottery fixed

--- a/stylesheets/layout/_home-5.scss
+++ b/stylesheets/layout/_home-5.scss
@@ -180,17 +180,14 @@
             grid-row: 2 / span 1;
             color: bc.$card-left-text-i;
             h3 {
-              margin: auto !important;
               font: 16px;
               margin-right: auto;
             }
             h3 {
-              margin: auto !important;
               font-size: 32px;
               margin-right: auto;
             }
             p {
-              margin: auto !important;
               color: bc.$card-left-text-i;
               text-align: left;
             }
@@ -223,7 +220,7 @@
               font: 16px;
               margin-right: auto;
             }
-            h2 {
+            h3 {
               color: #fecb0e;
               font-size: 32px;
               margin-right: auto;
